# hello-litestar-htmx

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
docs/: 01_hello_world.md  02_todo_list.md  03_htmx_detection.md  04_clean_architecture.md  05_csrf.md  README.md
src/hello_litestar_htmx/: __init__.py  app.py  csrf.py
src/hello_litestar_htmx/middleware/: csrf.py
src/hello_litestar_htmx/models/: __init__.py  todo.py
src/hello_litestar_htmx/repositories/: __init__.py  todo.py
src/hello_litestar_htmx/routes/: __init__.py  pages.py  todos.py
src/hello_litestar_htmx/services/: __init__.py  todo.py
templates/: base.html  hello.html  index.html  todo_error.html  todo_item.html  todos.html  todos_partial.html
tests/: __init__.py  conftest.py  test_csrf.py  test_repositories.py  test_routes.py
