[project]
name = "hello-litestar-htmx"
version = "0.1.0"
description = "Litestar と HTMX を組み合わせたモダンなPythonウェブアプリケーション"
readme = "AGENTS.md"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_litestar_htmx"]

[tool.litestar]
app = "hello_litestar_htmx.app:app"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
